--- a/src/style.css
+++ b/src/style.css
@@ -75,7 +75,7 @@ html{
 .btnRegs{
   text-align: center;
   padding-top: 1rem;
-  padding-bottom: .3rem; */
+  padding-bottom: .3rem; 
   
 }
   .button {
@@ -97,13 +97,27 @@ html{
   text-align: center;
   
 }
-
+.user-info{
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.user-infoProfile{
+  text-align: center;
+}
+form textarea{
+  background-position: center;
+  margin-left: 15%;
+  text-align: center;
+  height:35px;
+}
 .container-home__h4 {
   text-align: center;
 }
 
 .viewNav{
-  background-color: ;
+  background-color:  rgba(28, 42, 105, 0.884);
+  color:white
 }
 nav ul{
   list-style:none;/*quitarle los estilos de lista*/
@@ -123,10 +137,10 @@ nav li{
   border-radius: 50%;
 }
 
-.user-infoProfile{
+/* .user-infoProfile{
   margin-left: auto; 
   margin-right: auto;
-}
+} */
 
 .user-infoProfile img{
   width: 5rem;
@@ -216,4 +230,14 @@ nav li{
         letter-spacing: 1px;
         padding-bottom: 2rem;
       }
-  
+      #btn-post{
+        background-color:yellow;
+        width:50px;
+        border-radius:10%;
+        border:1.5px solid rgba(28, 42, 105, 0.884);
+        text-decoration-color:  rgba(28, 42, 105, 0.884);
+        margin-left: 20px;
+      }
+      #uploadInput{
+        width: 70%;
+      }
